benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe032_power.oepc_power.opt_pso.oepc_pso.opt_rmo.oepc_rmo.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe032_power.oepc_power.opt_pso.oepc_pso.opt_rmo.oepc_rmo.opt.yml/safe032_power.oepc_power.opt_pso.oepc_pso.opt_rmo.oepc_rmo.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe032_power.oepc_power.opt_pso.oepc_pso.opt_rmo.oepc_rmo.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c
Compilation started
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c: In function ‘P0’:
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c:567:19: error: ‘FALSE’ undeclared (first use in this function)
  567 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c:567:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c: In function ‘P1’:
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c:605:19: error: ‘FALSE’ undeclared (first use in this function)
  605 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c: In function ‘main’:
/tmp/BenchExec_run__am2me25/tmp/tmpn56wrsq7.c:709:19: error: ‘FALSE’ undeclared (first use in this function)
  709 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
